# citizen

./: .gitignore  LICENSE  README.md
data/: README.md  pyproject.toml
data/workers/: Dockerfile.worker  news.py  wikipedia-edit.py
engine/: spikes.go
server/: index.js  package-lock.json  package.json
server/prisma/: schema.prisma
server/routes/: ingest.js  wiki.js
src/prisma/: schema.prisma
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/components/: date-display.tsx  header.tsx  weather.tsx
